{
  "version": 4,
  "terraform_version": "1.1.8",
  "serial": 49,
  "lineage": "2e4040bc-4316-aeab-dbca-fa4e5c423412",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "jumphost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06317d6e3b59199c3",
            "association_id": "eipassoc-0c25644ae7704f8d3",
            "domain": "vpc",
            "id": "eipalloc-06317d6e3b59199c3",
            "instance": "i-0b5d5caaa018d24cb",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0e8fef39e1352aa0b",
            "private_dns": "ip-10-0-2-30.ec2.internal",
            "private_ip": "10.0.2.30",
            "public_dns": "ec2-3-88-83-210.compute-1.amazonaws.com",
            "public_ip": "3.88.83.210",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.ec2jumphost",
            "aws_security_group.securitygroup",
            "aws_subnet.nat_gateway"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02d170db4226c08d2",
            "association_id": "eipassoc-068682a57ffd07804",
            "domain": "vpc",
            "id": "eipalloc-02d170db4226c08d2",
            "network_border_group": "us-east-1",
            "network_interface": "eni-028b49c2e404811e9",
            "private_dns": "ip-10-0-2-94.ec2.internal",
            "private_ip": "10.0.2.94",
            "public_dns": "ec2-44-206-46-215.compute-1.amazonaws.com",
            "public_ip": "44.206.46.215",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2jumphost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-080e1f13689e07408",
            "arn": "arn:aws:ec2:us-east-1:891376929503:instance/i-0b5d5caaa018d24cb",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b5d5caaa018d24cb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "jenkins",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e8fef39e1352aa0b",
            "private_dns": "ip-10-0-2-30.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.30",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-084ca20c7dde7e164",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-08cfa1b9ee7ac3683"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fc8b7c8d27b18e08",
            "tags": {
              "Name": "terraformMachineJumphost"
            },
            "tags_all": {
              "Name": "terraformMachineJumphost"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08cfa1b9ee7ac3683"
            ]
          },
          "dependencies": [
            "aws_security_group.securitygroup",
            "aws_subnet.nat_gateway"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraforminstance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-080e1f13689e07408",
            "arn": "arn:aws:ec2:us-east-1:891376929503:instance/i-0dc315d4388a29324",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dc315d4388a29324",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "jenkins",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-096ba9baee21e3dbe",
            "private_dns": "ip-10-0-1-228.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.228",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09c964bd2c5c37284",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-08cfa1b9ee7ac3683"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-013d29ff6addb57f2",
            "tags": {
              "Name": "terraformMachine"
            },
            "tags_all": {
              "Name": "terraformMachine"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08cfa1b9ee7ac3683"
            ]
          },
          "dependencies": [
            "aws_security_group.securitygroup",
            "aws_subnet.instance"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891376929503:internet-gateway/igw-04397acd5cbd56ac9",
            "id": "igw-04397acd5cbd56ac9",
            "owner_id": "891376929503",
            "tags": {
              "Name": "terraformGateway"
            },
            "tags_all": {
              "Name": "terraformGateway"
            },
            "vpc_id": "vpc-0e45604891ec3f1ed"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02d170db4226c08d2",
            "association_id": "eipassoc-068682a57ffd07804",
            "connectivity_type": "public",
            "id": "nat-071019e63bc8d975d",
            "network_interface_id": "eni-028b49c2e404811e9",
            "private_ip": "10.0.2.94",
            "public_ip": "44.206.46.215",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0fc8b7c8d27b18e08",
            "tags": {
              "Name": "terraformNatGateway"
            },
            "tags_all": {
              "Name": "terraformNatGateway"
            }
          },
          "dependencies": [
            "aws_eip.nat_gateway",
            "aws_subnet.nat_gateway",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891376929503:route-table/rtb-04dfbe74b5ce3355e",
            "id": "rtb-04dfbe74b5ce3355e",
            "owner_id": "891376929503",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-071019e63bc8d975d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e45604891ec3f1ed"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_gateway",
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.nat_gateway",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891376929503:route-table/rtb-069076f6754b88267",
            "id": "rtb-069076f6754b88267",
            "owner_id": "891376929503",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04397acd5cbd56ac9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e45604891ec3f1ed"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.nat_gateway",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-018c09df7376ab223",
            "route_table_id": "rtb-04dfbe74b5ce3355e",
            "subnet_id": "subnet-013d29ff6addb57f2"
          },
          "dependencies": [
            "aws_eip.nat_gateway",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.instance",
            "aws_subnet.instance",
            "aws_subnet.nat_gateway",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06ce65f285a68ba69",
            "route_table_id": "rtb-069076f6754b88267",
            "subnet_id": "subnet-0fc8b7c8d27b18e08"
          },
          "dependencies": [
            "aws_internet_gateway.nat_gateway",
            "aws_route_table.nat_gateway",
            "aws_subnet.nat_gateway",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "securitygroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891376929503:security-group/sg-08cfa1b9ee7ac3683",
            "description": "terraformSecurityGroup",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08cfa1b9ee7ac3683",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraformSecurityGroup",
            "name_prefix": "",
            "owner_id": "891376929503",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraformSecurityGroup"
            },
            "tags_all": {
              "Name": "terraformSecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e45604891ec3f1ed"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891376929503:subnet/subnet-013d29ff6addb57f2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-013d29ff6addb57f2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891376929503",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "teraformSubnetInstance"
            },
            "tags_all": {
              "Name": "teraformSubnetInstance"
            },
            "vpc_id": "vpc-0e45604891ec3f1ed"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891376929503:subnet/subnet-0fc8b7c8d27b18e08",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fc8b7c8d27b18e08",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891376929503",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraformSubnetNAT"
            },
            "tags_all": {
              "Name": "terraformSubnetNAT"
            },
            "vpc_id": "vpc-0e45604891ec3f1ed"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891376929503:vpc/vpc-0e45604891ec3f1ed",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05845dfbc4c7cb720",
            "default_route_table_id": "rtb-0b885890b02c13585",
            "default_security_group_id": "sg-0a3db09d1a8a0e2d6",
            "dhcp_options_id": "dopt-03dcbd04e637e0ae2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e45604891ec3f1ed",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b885890b02c13585",
            "owner_id": "891376929503",
            "tags": {
              "Name": "terraform"
            },
            "tags_all": {
              "Name": "terraform"
            }
          }
        }
      ]
    }
  ]
}